# demo

./: .eslintcache  .gitignore  AppWeb.csproj  C++STL.md  CMakeLists.txt  GitChat-DayStep.sublime-project  OpenCV-Demos.sublime-project  OpenCV-Demos.sublime-workspace  Program.cs  README.md  Readme.txt  Startup.cs  TouchEffect.UWP.cs  Tween.html  XamarinVS2019.sln  XamarinVS2019.sublime-workspace  _Imports.razor  api-layout.xd  api_flow.txt  appsettings.json  autogit.bat  basic.js  bizcharts.sublime-project  bizcharts.sublime-workspace  c-daystep.html  c-radio.html  cmake.md  cppDemo.sublime-project  cppDemo.sublime-workspace  cppDotNet.sublime-project  cppDotNet.sublime-workspace  demo.js  dllDemo-ninja.sublime-project  dllDemo-ninja.sublime-workspace  dllDemo.sublime-project  dllDemo.sublime-workspace  echarts.sublime-workspace  feedback-2019-4-3-luo.xls  git.sublime-project  git.sublime-workspace  (+40 more)
Controllers/: Hello.cs  HomeController.cs
Data/: SchoolContext.cs  SchoolDbInitializer.cs  UserContext.cs  UserDC.cs  WeatherForecastService.cs
HookSrv/: HookSrv.dsp  HookSrv.plg  hooksrv.cpp  hooksrv.h  hooksrv.vcxproj
HotSwap/: MANIFEST.MF  build.bat  gin.go  pom.xml
Migrations/: 20200531105034_InitialCreate.Designer.cs  20200531105034_InitialCreate.cs  20200531105213_upgrade_1.0.Designer.cs  20200531105213_upgrade_1.0.cs  20200601221856_update_2.0.Designer.cs  20200601221856_update_2.0.cs  SchoolContextModelSnapshot.cs
Misc/: ChatHub.cs  EventBus.cs  LinkTagHelper.cs  RequestCultureMiddleware.cs
Models/: Course.cs  Enrollment.cs  ErrorViewModel.cs  Student.cs  WeatherForecast.cs
Pages/: Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  Index.razor  Privacy.cshtml  Privacy.cshtml.cs  _Host.cshtml  (+4 more)
dotnet-clr/: CMakeLists.txt
dotnet-clr/clr-gui/: AppForm.h  clr.sln  clr.vcxproj
dotnet-clr/clr-res/: AssemblyInfo.cpp  MyForm.h  UpgradeLog.htm  clrc.sln  clrc.vcxproj
dotnet-clr/msbuild/: AssemblyInfo.cpp  Helloworld.cpp  Helloworld.cs  helloworld.csproj  helloworld.vcxproj
dotnet-clr/src/: MathClient.cpp  MathLibrary.h  MathLibrary_nm.cpp  abstract_native_keyword.cpp  compiler_type_traits.cpp  declspec_appdomain.cpp  explicit_override_1.cpp  explicit_override_2.cpp  explicit_override_3.cpp  explicit_override_4_dll.cpp  extending_metadata_b.cpp  extending_metadata_e_nm.cpp  extending_metadata_f_nm.cpp  friend_assemblies_2.cpp  friend_assemblies_dll.cpp  generics_overview_2.cpp  generics_overview_3.cpp  generics_overview_nm.cpp  initializing_arrays1_nm.cpp  mcpp_paramarray4.cpp  mcppv2_array_of_arrays.cpp  mcppv2_gcnew_1.cpp  mcppv2_gcnew_2.cpp  mcppv2_paramarray.cpp  mcppv2_paramarray2_dll.cpp  mcppv2_paramarray3.cs  multidimensional_arrays.cpp  override_native_keyword.cpp  plugin_application.cpp  plugin_assembly_dll.cpp  sealed_native_keyword_nm.cpp  self_reflection.cpp  string_operators.cpp  string_operators_2.cpp  string_operators_3.cpp  tracking_reference_data.cpp  tracking_reference_handles.cpp  tracking_reference_interior_ptr.cpp  tracking_reference_valuetypes_1.cpp  tracking_reference_valuetypes_2.cpp  (+12 more)
mfcDemo/: CMakeLists.txt  ChildView.h  MainFrm.h  MakeHelp.bat  demo.001  demo.aps  demo.cbp  demo.clw  demo.cpp  demo.dep  demo.depend  demo.dsp  demo.h  demo.layout  demo.ncb  demo.opt  demo.plg  demo.rc  demo.sln  demo.vcxproj  demo.vcxproj.filters  mfcDemo.sublime-project  mfcDemo.sublime-workspace  resource.h  vc_cl.html
mfcDemo/01-simple/: ReadMe.txt  demo.mak  demo.vcxproj  demo.vcxproj.filters
mfcDemo/01-simple/hlp/: AfxCore.rtf  DEMO.HLP  demo.cnt  demo.hm
mfcDemo/01-simple/res/: demo.aps  demo.rc  demo.rc2  demo_big5.rc  resource.h
mfcDemo/01-simple/src/: AboutDialog.cpp  AboutDialog.h  ChildView.cpp  MainFrm.cpp  MainFrm.h  StdAfx.cpp  StdAfx.h  demo.cpp  demo.h
mfcDemo/comDemo/: AddObj.cpp  IAdd.h  IAdd.idl  IAdd.tlb  IAdd_i.c  IAdd_p.c  dlldata.c
mfcDemo/comDemo/COMStepByStep_demo/AddObj/: AddObj.dsp  AddObj.dsw  AddObj.h  AddObj.mak  AddObj.plg  AddObj.sln  AddObj.vcxproj  AddObj.vcxproj.filters  AddObjFactory.cpp  AddObjFactory.h  AddObjGuid.h  Exports.cpp  Exports.def  Factory.cpp  Factory.h  IAdd.h  IAdd.idl  IAdd.tlb  IAdd_i.c  IAdd_p.c  Registry.cpp  dlldata.c  resource.aps  resource.h  resource.rc  trace.h
mfcDemo/comDemo/COMStepByStep_demo/VBClient/: Client.vbw  CodeGuru.vbw  CodeGuruDemo.vbp  CodeGuruDemo.vbw  frmMain.frm
mfcDemo/comDemo/COMStepByStep_demo/VCClient/: Client.cpp  VCClient.dsp  VCClient.dsw  VCClient.mak  VCClient.plg
mfcDemo/comDemo/rpcgen_test/: Makefile.test  test.h  test.x  test_client.c  test_clnt.c  test_server.c  test_svc.c  test_xdr.c
mfcDemo/dynamicLib/: CMakeLists.txt  lib.cpp  lib.def  lib.h
mfcDemo/hlp/: demo.hpj  demo.ph
mfcDemo/lib/: log.txt
mfcDemo/mfc_dynamic/: ChildFrm.cpp  ClassView.cpp  FileView.cpp  MainFrm.cpp  PropertiesWnd.cpp  Resource.h  mfc_dynamic.cpp  mfc_dynamic.h  mfc_dynamic.sln  mfc_dynamic.vcxproj  mfc_dynamic.vcxproj.filters  mfc_dynamicDoc.cpp  mfc_dynamicDoc.h  mfc_dynamicView.cpp  mfc_dynamicView.h  mfcdynamic.rc
mfcDemo/mfc_dynamic/res/: mfcdynamic.rc2
mfcDemo/mfc_static/: ChildFrm.cpp  ClassView.cpp  CntrItem.cpp  CntrItem.h  FileView.cpp  MainFrm.cpp  MainFrm.h  PropertiesWnd.cpp  Resource.h  calendarbar.cpp  calendarbar.h  framework.h  mfc_static.cpp  mfc_static.h  mfc_static.reg  mfc_static.sln  mfc_static.vcxproj  mfc_static.vcxproj.filters  mfc_staticDoc.cpp  mfc_staticDoc.h  mfc_staticView.cpp  mfc_staticView.h  mfcstatic.rc
mfcDemo/mfc_static/mfc_staticHandlers/: FilterHandler.h  FilterHandler.rgs  PreviewHandler.h  PreviewHandler.rgs  Resource.h  ThumbnailHandler.h  ThumbnailHandler.rgs  dlldata.c  dllmain.cpp  dllmain.h  framework.h  mfc_staticHandlers.cpp  mfc_staticHandlers.def  mfc_staticHandlers.rc  mfc_staticHandlers.vcxproj  mfc_staticHandlers.vcxproj.filters  mfcstaticHandlers.idl  mfcstaticHandlers_i.c  mfcstaticHandlers_i.h  mfcstaticHandlers_p.c  xdlldata.c
mfcDemo/mfc_static/res/: mfcstatic.rc2
mfcDemo/res/: RCa14172  demo.rc
mfcDemo/src/: CMakeLists.txt  ChildView.cpp  MainFrm.cpp  Test.cpp  demo.cpp  demo.h  libTest.cpp  setVar.bat
(+1231 files in other folders)
